# UIT-DS310

./: .gitignore  LICENSE  README.md  data.json  main.py  pyproject.toml  qa_train.json  requirements.txt  test_1_for_full.py
Notebooks/: EDA.ipynb  bge-v2_finetuning.ipynb  createhardnegativedata.ipynb  eda_statistics_table.csv  llm-inference.ipynb  mergeLawID.ipynb  qwen_4B_rerank.ipynb  reformatDataset.ipynb  stage-1-eval.ipynb  weighted-ensemble-gridsearch.ipynb
config/: config.py  config.yaml  exp_1.yaml  exp_10.yaml  exp_11.yaml  exp_12.yaml  exp_2.yaml  exp_3.yaml  exp_4.yaml  exp_5.yaml  exp_6.yaml  exp_7.yaml  exp_8.yaml  exp_9.yaml
data/: readme.md
data_sample/: data_sample.json
scripts/: build_bm25_index.py  build_index.py  build_reranker_index.py  build_retriever_index.py  evaluate_pipeline.py  export_chunks.py  optimize_weights.py  qwen_ranking.py  run_query.py  stage_1_eval.py  stage_2_eval.py
src/: __init__.py
src/data/: __init__.py  chunking.py  dataloader.py  preprocessor.py
src/embeddings/: __init__.py  chroma_index.py  embedder.py
src/evaluation/: __init__.py  metrics.py
src/fusion/: __init__.py  rrf.py  weighted_ensemble.py
src/pipelines/: __init__.py  build_pipeline.py  inference.py
src/reranking/: __init__.py  build_rerankers.py  ensemble_reranker.py  qwen_reranker.py  single_reranker.py
src/retrieval/: __init__.py  bm25_retriever.py  dense_retriever.py  emsemble.py  ensemble.py  tfidf_retriever.py
src/utils/: __init__.py  format_reranker_input.py  logger.py  text_utils.py
